<resources>
    <string name="app_name">Geotweeter</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="title_activity_timeline">Geotweeter</string>
    <string name="button_reply">Reply</string>
    <string name="action_retweet">Retweet</string>
    <string name="settings_accounts">Kontoeinstellungen</string>
    <string name="accounts">Konten</string>
    <string name="settings_display">Darstellung</string>
    <string name="pref_show_img_previews">Vorschaubilder anzeigen</string>
    <string name="settings">Einstellungen</string>
    <string name="pref_dark_theme">Dunkle Darstellung</string>
    <string name="pref_theme_changed_title">Geotweeter neustarten?</string>
    <string name="pref_theme_changed_message">Das Theme wurde geändert. Änderungen werden erst nach einem Neustart des Geotweeters aktiv.</string>
    <string name="pref_theme_changed_positive">Neustarten</string>
    <string name="pref_theme_changed_negative">Nein</string>
    <string name="pref_account">Kontoeinstellungen</string>
    <string name="pref_name">Name</string>
    <string name="pref_url">URL</string>
    <string name="pref_desc">Biographie</string>
    <string name="pref_loc">Ort</string>
    <string name="pref_cat_accounts">Konten</string>
    <string name="btn_geo">GPS</string>
    <string name="btn_send">Senden</string>
    <string name="btn_new_tweet">Neuer Tweet</string>
    <string name="settings_accounts_title">Konten</string>
    <string name="add_account">Konto hinzufügen</string>
    <string name="authenticate_account">Konto authentifizieren</string>
    <string name="tap_for_settings">Dieses Konto bearbeiten</string>
    <string name="account_prefs">Account-Einstellungen</string>
    <string name="pref_tweet_time_style_title">Zeitdarstellung</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="no">Nein</string>
    <string name="yes">Ja</string>
    <string name="ok">OK</string>
    <string name="set">Setzen</string>
    <string name="cancel">Abbrechen</string>
    <string name="btn_add_image">Bild</string>
    <string name="image_gridview_title">Bilder</string>
    <string name="action_delete">Löschen</string>
    <string name="too_much_images">Du kannst kein weiteres Bild zufügen</string>
    <string name="pref_image_hoster_title">Image Hoster</string>
    <string name="context_menu_title">Links</string>
    <string name="action_reply">Antworten</string>
    <string name="action_conv">Konversation</string>
    <string name="action_fav">Favorisieren</string>
    <string name="action_defav">Entfavorisieren</string>
    <string name="action_follow">Folgen</string>
    <string name="action_unfollow">Entfolgen</string>
    <string name="action_block">Blocken</string>
    <string name="action_unblock">Entblocken</string>
    <string name="action_send_dm">DM schicken</string>
    <string name="action_mark_as_spam">Als Spam melden</string>
    <string-array name="pref_tweet_time_style_entries">
        <item>dd.MM.yy HH:mm</item>
        <item>dd.MM. HH:mm</item>
        <item>vergangene Zeit</item>
    </string-array>
    <string-array name="pref_image_hoster_entries">
        <item>Twitter</item>
        <item>Twitpic</item>
    </string-array>
    <string name="pref_notifications">Benachrichtigungen</string>
    <string name="pref_notifications_enabled_title">Hauptschalter</string>
    <string name="pref_notifications_enabled_on">Benachrichtigungen sind aktiviert</string>
    <string name="pref_notifications_enabled_off">Benachrichtigungen sind deaktiviert</string>
    <string name="pref_notifications_sound">Ton</string>
    <string name="pref_notifications_sound_enabled_title">Ton abspielen</string>
    <string name="pref_notifications_sound_ringtone_title">Benachrichtigungston</string>
    <string name="pref_notifications_vibration">Vibration</string>
    <string name="pref_notifications_vibration_enabled_title">Vibration bei Benachrichtigung</string>
    <string name="pref_notifications_led">LED</string>
    <string name="pref_notifications_led_enabled_title">LED benutzen</string>
    <string name="pref_notifications_led_color_title">Farbe</string>
    <string-array name="pref_notifications_led_color_entries">
        <item>Blau</item>
        <item>Rot</item>
        <item>Gelb</item>
        <item>Grün</item>
        <item>Lila</item>
        <item>Rosa</item>
        <item>Weiß</item>
        <item>Orange</item>
        <item>Braun</item>
    </string-array>
    <string name="pref_notifications_types">Benachrichtigungstypen</string>
    <string name="pref_notifications_types_mentions_from_friends_title">Mentions von Freunden</string>
    <string name="pref_notifications_types_mentions_from_strangers_title">Mentions von Fremden</string>
    <string name="pref_notifications_types_favorites_title">Favorisierungen</string>
    <string name="pref_notifications_types_retweets_title">Retweets</string>
    <string name="pref_notifications_types_direct_messages_title">Direktnachrichten</string>
    <string name="pref_notifications_silent_time">Ruhezeit</string>
    <string name="pref_notifications_silent_time_enabled_title">Ruhezeiten nutzen</string>
    <string name="pref_notifications_silent_time_start_title">Beginn der Ruhezeit</string>
    <string name="pref_notifications_silent_time_end_title">Ende der Ruhezeit</string>
    <string name="pref_notifications_types_mentions_title">Mentions</string>
    <string name="title_activity_settings_about">About</string>
    <string name="pref_about">Informationen</string>
    <string name="menu_about">Informationen</string>
    <string name="pref_about_libraries">Verwendete Bibliotheken</string>
    <string name="crash_toast_text">Ups. Der Geotweeter ist abgestürzt. Räume auf…</string>
    <string name="crash_dialog_text">Ein unerwarteter Fehler ist aufgetreten. Bitte hilf uns, diesen Fehler zu beheben, in dem du uns Informationen zu dem Fehler zukommen lässt. Klicke dazu bitte auf "OK". Andernfalls bitte auf "Abbrechen".</string>
    <string name="crash_dialog_comment_prompt">(Optional) Was hast du getan, als der Fehler auftrat?</string>
    <string name="crash_dialog_ok_toast">Fehlerbericht wurde gesendet. Vielen Dank!</string>
    <string name="pref_development">Entwicklung</string>
    <string name="pref_development_email">Mail-Adresse für Crashreports</string>
    <string name="pref_development_email_summary">Freiwillig. Damit wird dich nach Crashes erreichen können.</string>
    <string name="pref_clear_image_cache">Bilder-Cache löschen</string>
    <string name="pref_image_cache_cleared">Bilder-Cache gelöscht</string>
    <string name="error_api_access_retry">Fehler beim API-Zugriff. Erneuter Versuch in 10 Sekunden.</string>
    <string name="error_api_access_recurring">Wiederkehrender Fehler beim API-Zugriff. Kein automatischer Neuversuch.</string>
    <string name="error_tweet_protected">Dieser Tweet ist in Deiner Timeline nicht verfügbar. Das tut uns leid.</string>
    <string name="error_tweet_loading_failed">Tweet konnte nicht abgerufen werden. Sorry.</string>
    <string name="error_connection_action">Aktion konnte wegen eines Verbindungsfehlers nicht ausgeführt werden.</string>
    <string name="error_connection_retry_dlg">Verbindungsprobleme! Abruf wiederholen?</string>
    <string name="error_get_relationship">Problem bei Abruf der Beziehung</string>
    <string name="error_get_followers">Problem bei Abruf der Follower</string>
    <string name="error_get_friends">Problem bei Abruf der Freunde</string>
    <string name="error_general">Unbekannter Fehler (Wirklich!)</string>
    <string name="error_get_user">Problem bei Abruf der Userdetails</string>
    <string name="error_user_action">Aktion konnte nicht durchgeführt werden.</string>
    <string name="error_get_user_timeline_1">Fehler beim Abruf der</string>
    <string name="error_get_user_timeline_2">. Abruf wiederholen?</string>
    <string name="http_code">HTTP-Code</string>
    <string name="pref_image_size_title">Bilder-Größe</string>
    <string-array name="pref_image_size_entries">
        <item>Originalgröße</item>
        <item>1MB</item>
        <item>2MB</item>
        <item>3MB</item>
    </string-array>
    <string name="pref_image_size_summary">Maximalgröße der zu versendenen Bilder. Bei Twitter ist die Maximalgröße begrenzt.</string>
    <string name="tweetsendservice_summary">Sende Tweet %1$d/%2$d…</string>
    <string name="tweetsendservice_activity">Sende…</string>
    <string name="tweetsendservice_finished_sending_single_tweet">Tweet erfolgreich versendet</string>
    <string name="tweetsendservice_finished_sending_multiple_tweets">Tweets erfolgreich versendet</string>
    <string name="tweetsendservice_temporary_exception">Tweetversand schlug fehl. Nächster Versuch nach 60 Sekunden.</string>
    <string name="tweetsendservice_permanent_exception">Tweet kann nicht versendet werden. Hier klicken für Optionen.</string>
    <string name="notification_text_mention_single">1 Mention</string>
    <string name="notification_text_mention_plural">%1$d Mentions</string>
    <string name="notification_text_dm_single">1 DM</string>
    <string name="notification_text_dm_plural">%1$d DMs</string>
    <string name="notification_text_newest">Neueste: %1$s</string>
    <string name="direct_message_notification_text">DM von %1$s</string>
    <string name="direct_message_notification_content_title">DM von %1$s</string>
    <string name="direct_message_from_someone">von %1$s</string>
    <string name="direct_message_to_someone">an %1$s</string>
    <string name="timeline_element_timediff_now">gerade eben</string>
    <string name="timeline_element_timediff_one_second">vor 1 Sekunde</string>
    <string name="timeline_element_timediff_multiple_seconds">vor %1$d Sekunden</string>
    <string name="timeline_element_timediff_one_minute">vor 1 Minute</string>
    <string name="timeline_element_timediff_multiple_minutes">vor %1$d Minuten</string>
    <string name="timeline_element_timediff_one_hour">vor 1 Stunde</string>
    <string name="timeline_element_timediff_multiple_hours">vor %1$d Stunden</string>
    <string name="timeline_element_timediff_days">am %1$s</string>
    <string name="timeline_element_timediff_date_format">dd.MM.yy HH:mm</string>
    <string name="tweet_source_web">web</string>
    <string name="tweet_source">via %1$s</string>
    <string name="tweet_notification_text_mention">Mention von %1$s: %2$s</string>
    <string name="tweet_notification_text_retweet">%1$s retweetete: %2$s</string>
    <string name="tweet_notification_content_title_mention">Mention von %1$s</string>
    <string name="tweet_notification_content_title_retweet">Retweet von %1$s</string>
    <string name="new_tweet_activity_title">Neuer Tweet</string>
    <string name="new_tweet_activity_title_sending_dm">DM an %1$s</string>
    <string name="dialog_retweet_title">Wirklich retweeten?</string>
    <string name="dialog_retweet_message">Bist du sicher, dass du retweeten möchtest?</string>
    <string name="dialog_retweet_positive">Retweeten</string>
    <string name="dialog_delete_title">Wirklich löschen?</string>
    <string name="dialog_delete_message">Bist du sicher, dass du den Status löschen möchtest?</string>
    <string name="dialog_delete_positive">Löschen</string>
    <string name="dialog_spam_message">Account wirklich als Spam melden?</string>
    <string name="dialog_spam_positive">Spam!</string>
    <string name="dialog_follow_protected">Da dieser Account geschützt ist, ist die Verfolgung erst nach einer Freischaltung seitens %1$s möglich.</string>
    <string name="dialog_follow_protected_yes">Kein Problem, ich warte</string>
    <string name="dialog_follow_protected_no">Dann lieber nicht</string>
    <string name="user_details">Benutzerdetails</string>
    <string name="url_icon">urlIcon</string>
    <string name="loc_icon">locIcon</string>
    <string name="desc_icon">descIcon</string>
</resources>