<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    			  android:key="pref_main" 
    			  android:title="@string/settings">
    <PreferenceCategory android:title="@string/pref_cat_accounts" 
        				android:key="pref_cat_accounts">
        <Preference android:title="@string/settings_accounts" 
            		android:key="pref_account_settings">
            <intent android:action=".activities.SettingsAccounts" />
        </Preference>
        
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_cat_display" 
        				android:title="@string/settings_display">
        <CheckBoxPreference android:key="pref_show_img_previews" 
            				android:title="@string/pref_show_img_previews"/>
        <CheckBoxPreference android:key="pref_dark_theme" 
            				android:title="@string/pref_dark_theme"/>
        
        <ListPreference 
            android:key="pref_tweet_time_style"
            android:title="@string/pref_tweet_time_style_title"
            android:entries="@array/pref_tweet_time_style_entries"
            android:entryValues="@array/pref_tweet_time_style_entryValues"
            android:defaultValue="dd.MM.yy HH:mm"/>
        
        <ListPreference 
            android:key="pref_image_hoster"
            android:title="@string/pref_image_hoster_title"
            android:entries="@array/pref_image_hoster_entries"
            android:entryValues="@array/pref_image_hoster_entryValues"
            android:defaultValue="twitter"/>
        
        <ListPreference 
            android:key="pref_notification_sound"
            android:title="@string/pref_notification_sound_title"
            android:entries="@array/pref_notification_sound_entries"
            android:entryValues="@array/pref_notification_sound_entryValues"
            android:defaultValue="plang"/>
    </PreferenceCategory>
    

</PreferenceScreen>